[jg1216] Adjusted bullet point spacing on level intro and fixed error with runtime persisting when levels are loaded.

--- a/backend_js/public/shared/level_intro.css
+++ b/backend_js/public/shared/level_intro.css
@@ -2,6 +2,10 @@ p {
   margin-bottom: 10px;
 }
 
+li {
+  margin-bottom: 10px;
+}
+
 .titles {
   display: block;
   margin: auto;
